c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/extra_credit/compound_divide.c
int main(void) {
    int to_divide = 8;
    to_divide /= 4;
    return to_divide;
}