c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/use_then_redefine.c
int main(void) {
    int a = 0;
    return a;
    int a = 1;
    return a;
}